# Expense-Control-Unit

./: .editorconfig  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .env  Cargo.toml
backend/.sqlx/: query-02d5935821dde5e79a3c3ae3e75d25b22acf39b8b728d9028600bef22dc4020e.json  query-04336054f465dc49e2db635422592bb4609255ba25389a2825ade3a896835281.json  query-0b477417762122249b3fb5dc85c92bd64bbad15ee80962c8d630c0a749508188.json  query-1278de6c34b12160c2300cba3e26782865f3e425eb2fecf5de42d0d9dabe1fed.json  query-145a6f4deaffffa19cf9427e122aa8f1e501a58a276abdf7ac798ac0e8945aac.json  query-1b4aeabaf058070abb3999a3d3cdd0873ff9f8989bf5b57374799fd8e26f0e8a.json  query-26c2601845990798315893af76bfe371c3b678766789c5fbc8a2a6a43483e0e4.json  query-2abc64fd480c093ca24bb7fd9f6a9502c0eb568cdb1d1e4658f45cafa2a1802b.json  query-2ed3e74b2c515cdd239741762281189b1d99754716428fad3acba8985d7eba2f.json  query-350854984f7dd6aceed0d21c25793dbdd12d5a95044c901ce59306275700f2ed.json  query-3b089ce0041e6a3eb42ec2b2a3ea42f66e2ce6e8a034abfc13821ac4d54e0aa8.json  query-4449bb6f8a65ae4a8e2051dd37ee5494c6d018a4b1d81730f4f47f4e8283703c.json  query-45b061063497860a101654cfe9b5e5003d7a7ce47c4e474141d9647982f355e0.json  query-49dc29d8c33d869fd89efe40f182fbddef086a5c16090ac513ece740496f7608.json  query-516bd514cb22de44a6e9998b2267c75508ec56f0b973082cc98ab25713e5a5e1.json  query-626baeaa7a2c1e68758a924381f053c1691c5b2e0c1e9d104021a3492188d998.json  query-697d96d71d5f690cfdd7c090ebad1f467e6a0e85cf587a7f2833c444372d85e9.json  (+23 more)
backend/src/: db.rs  (+4 more)
(+62 files in other folders)
